# gsma-open-gw-apis

gateway/: pyproject.toml
gateway/app/: exceptions.py
gateway/app/crud/: crud_mongo.py
gateway/app/db/: collections.py  session.py
gateway/app/endpoints/: __init__.py
gateway/app/endpoints/application_profiles/: __init__.py  create_profile.py  delete_profile_by_id.py  get_profile_by_id.py  patch_profile_by_id.py
gateway/app/schemas/: application_profiles.py
microsite/: docusaurus.config.ts  package.json  pnpm-lock.yaml
microsite/docs/: Welcome.md
microsite/docs/About The Project/: Architecture.md  Context.md  Goals.md  Use Cases.md
microsite/docs/State Of The Art/: 3GPP Open APIs.md  API Adoption.md  GSMA Open GW.md  TMF ODA.md
microsite/src/pages/: index.tsx
microsite/static/api/: openapi.json
microsite/versioned_docs/version-1.2/About The Project/: Architecture.md
