[project]
name = "gsma-open-gateway"
version = "0.1.0"
description = "IT's GSMA Open Gateway implementation"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "redis[hiredis]>=5.2.1",
    "geopy>=2.4.1",
    "pymongo>=4.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.0",
]

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[[tool.mypy.overrides]]
module = ["geopy", "geopy.distance"]
ignore_missing_imports = true

[tool.ruff.lint]
extend-select = ["T20"]
